fix: add model config option for opencode CLI
opencode run requires --model flag, otherwise SDK fails with
"TypeError: sdk.responses is not a function". Read model from
config file to allow flexibility.

--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,6 @@
 {
-  "tool": "amp",
+  "tool": "opencode",
+  "model": "opencode/minimax-m2.1-free",
   "reportsDir": "./reports",
   "outputDir": "./scripts/compound",
   "qualityChecks": ["npm run typecheck", "npm test"],
